--- a/internal/projects/bulleit/Stamped/CreateStampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/CreateStampDetailViewController.xib
@@ -170,7 +170,7 @@
 												<string key="NSFrame">{{10, 7}, {57, 57}}</string>
 												<reference key="NSSuperview" ref="234167628"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="739928940"/>
+												<reference key="NSNextKeyView" ref="1018067781"/>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">3</int>
 													<bytes key="NSWhite">MQA</bytes>
@@ -184,47 +184,13 @@
 												<string key="NSFrame">{{0, 103}, {310, 1}}</string>
 												<reference key="NSSuperview" ref="234167628"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="723243853"/>
+												<reference key="NSNextKeyView" ref="739928940"/>
 												<string key="NSReuseIdentifierKey">_NS:49</string>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">1</int>
 													<bytes key="NSRGB">MC45MTEwMDU0MzQ4IDAuOTExMDA1NDM0OCAwLjkxMTAwNTQzNDgAA</bytes>
 												</object>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-											</object>
-											<object class="IBUIButton" id="723243853">
-												<reference key="NSNextResponder" ref="234167628"/>
-												<int key="NSvFlags">308</int>
-												<string key="NSFrame">{{75, 0}, {235, 104}}</string>
-												<reference key="NSSuperview" ref="234167628"/>
-												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="430629333"/>
-												<string key="NSReuseIdentifierKey">_NS:196</string>
-												<bool key="IBUIOpaque">NO</bool>
-												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-												<int key="IBUIContentHorizontalAlignment">0</int>
-												<int key="IBUIContentVerticalAlignment">0</int>
-												<object class="NSColor" key="IBUIHighlightedTitleColor" id="935530847">
-													<int key="NSColorSpace">3</int>
-													<bytes key="NSWhite">MQA</bytes>
-												</object>
-												<object class="NSColor" key="IBUINormalTitleColor">
-													<int key="NSColorSpace">1</int>
-													<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-												</object>
-												<object class="NSColor" key="IBUINormalTitleShadowColor" id="5386939">
-													<int key="NSColorSpace">3</int>
-													<bytes key="NSWhite">MC41AA</bytes>
-												</object>
-												<object class="IBUIFontDescription" key="IBUIFontDescription" id="437072215">
-													<int key="type">1</int>
-													<double key="pointSize">15</double>
-												</object>
-												<object class="NSFont" key="IBUIFont" id="484507318">
-													<string key="NSName">Helvetica</string>
-													<double key="NSSize">15</double>
-													<int key="NSfFlags">16</int>
-												</object>
 											</object>
 											<object class="IBUILabel" id="430629333">
 												<reference key="NSNextResponder" ref="234167628"/>
@@ -234,7 +200,10 @@
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="977492604"/>
 												<string key="NSReuseIdentifierKey">_NS:129</string>
-												<reference key="IBUIBackgroundColor" ref="935530847"/>
+												<object class="NSColor" key="IBUIBackgroundColor" id="935530847">
+													<int key="NSColorSpace">3</int>
+													<bytes key="NSWhite">MQA</bytes>
+												</object>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
 												<int key="IBUIContentMode">7</int>
@@ -256,10 +225,10 @@
 											<object class="IBUITextView" id="739928940">
 												<reference key="NSNextResponder" ref="234167628"/>
 												<int key="NSvFlags">308</int>
-												<string key="NSFrame">{{69, 0}, {241, 75}}</string>
+												<string key="NSFrame">{{69, 0}, {241, 104}}</string>
 												<reference key="NSSuperview" ref="234167628"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="1018067781"/>
+												<reference key="NSNextKeyView" ref="430629333"/>
 												<string key="NSReuseIdentifierKey">_NS:522</string>
 												<object class="NSColor" key="IBUIBackgroundColor">
 													<int key="NSColorSpace">3</int>
@@ -268,6 +237,10 @@
 												<bool key="IBUIClipsSubviews">YES</bool>
 												<bool key="IBUIMultipleTouchEnabled">YES</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<bool key="IBUIBounces">NO</bool>
+												<bool key="IBUIScrollEnabled">NO</bool>
+												<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+												<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 												<string key="IBUIText"/>
 												<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 													<int key="IBUIAutocapitalizationType">2</int>
@@ -320,7 +293,7 @@
 									</object>
 									<object class="IBUILabel" id="626503621">
 										<reference key="NSNextResponder" ref="101741781"/>
-										<int key="NSvFlags">292</int>
+										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{34, 120}, {70, 17}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
@@ -344,7 +317,7 @@
 									</object>
 									<object class="IBUILabel" id="249527600">
 										<reference key="NSNextResponder" ref="101741781"/>
-										<int key="NSvFlags">292</int>
+										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{34, 164}, {70, 17}}</string>
 										<reference key="NSSuperview" ref="101741781"/>
 										<reference key="NSWindow"/>
@@ -427,10 +400,7 @@
 								<reference key="NSSuperview" ref="870662028"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="829180822"/>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">2</int>
-									<bytes key="NSRGB">MC4yODIzNTI5NTQxIDAuNzAxOTYwODAyMSAwLjIyNzQ1MDk5NjYAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="10650696"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</object>
@@ -476,7 +446,10 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="5386939"/>
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="5386939">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC41AA</bytes>
+						</object>
 						<object class="NSCustomResource" key="IBUIHighlightedImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">back_button_pressed@2x.png</string>
@@ -485,8 +458,15 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">back_button@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="437072215"/>
-						<reference key="IBUIFont" ref="484507318"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="437072215">
+							<int key="type">1</int>
+							<double key="pointSize">15</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="1066096463">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">15</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUIImageView" id="937420720">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -539,7 +519,7 @@
 							<string key="NSResourceName">toolbar_close</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="437072215"/>
-						<reference key="IBUIFont" ref="484507318"/>
+						<reference key="IBUIFont" ref="1066096463"/>
 					</object>
 					<object class="IBUIButton" id="573052172">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -565,7 +545,7 @@
 							<string key="NSResourceName">toolbar_checkmark</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="437072215"/>
-						<reference key="IBUIFont" ref="484507318"/>
+						<reference key="IBUIFont" ref="1066096463"/>
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
@@ -641,15 +621,6 @@
 						<reference key="destination" ref="430629333"/>
 					</object>
 					<int key="connectionID">53</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">reasoningTextPressed:</string>
-						<reference key="source" ref="723243853"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">55</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -891,7 +862,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="739928940"/>
 							<reference ref="430629333"/>
-							<reference ref="723243853"/>
 							<reference ref="410269748"/>
 							<reference ref="1018067781"/>
 						</object>
@@ -909,12 +879,6 @@
 						<reference key="object" ref="430629333"/>
 						<reference key="parent" ref="234167628"/>
 						<string key="objectName">Reasoning Label</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">54</int>
-						<reference key="object" ref="723243853"/>
-						<reference key="parent" ref="234167628"/>
-						<string key="objectName">Edit Reasoning Text Button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">48</int>
@@ -962,7 +926,6 @@
 					<string>48.CustomClassName</string>
 					<string>48.IBPluginDependency</string>
 					<string>52.IBPluginDependency</string>
-					<string>54.IBPluginDependency</string>
 					<string>64.IBPluginDependency</string>
 					<string>68.IBPluginDependency</string>
 					<string>69.IBPluginDependency</string>
@@ -1016,7 +979,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1040,35 +1002,14 @@
 					<string key="className">CreateStampDetailViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>backOrCancelButtonPressed:</string>
-							<string>reasoningTextPressed:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
+						<string key="NS.key.0">backOrCancelButtonPressed:</string>
+						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>backOrCancelButtonPressed:</string>
-							<string>reasoningTextPressed:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">backOrCancelButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">reasoningTextPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
+						<string key="NS.key.0">backOrCancelButtonPressed:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">backOrCancelButtonPressed:</string>
+							<string key="candidateClassName">id</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
